--- a/card.html
+++ b/card.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="card.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>card</title>
+  <link rel="stylesheet" href="card.css">
 </head>
+
 <body>
   <!--Card starts here-->
   <!-- mother div-->
-<div class="mother">
+
+  <div class="mother">
     <!--Logo-->
-    <img src="/logo1.png" alt="logo" height="50px" width="50px" class="logo">
-<h3 class="company">Educating the children</h3>
-<p id="slogan">This is codequeen cohort14</p>
-<img src="/cartoon.jfif" alt="cartoon" alt="photo" class="photo">
-<h3 class="company">Groot Bill</h3>
-<p>Graphical Designer</p>
+
+    <img src="/logo3.png" alt="logo" height="50px" width="50px" class="logo">
+
+    <h3 class="company" id="h1">Beauty Cosmetics</h3>
+    <p id="slogan">Glow everyday all the time...</p>
+    <img src="/cartoon.jfif" alt="cartoon" alt="photo" class="photo">
+
+    <h3 class="company">Groot Bill</h3>
+    <p id="p2">Makeup Artist</p><br>
+    <pre class="address">
+      Location: Hillside, Kampala
+      email: groofbill@email.com
+      Phome: +256 765 654 812
+    </pre>
 
 
-</div>
+  </div>
 
-  <!--card Ends here-->  
+  <!--card Ends here-->
 </body>
+
 </html>
