--- a/card2.html
+++ b/card2.html
@@ -11,8 +11,7 @@
 <body>
     <!--start of first div -->
     <div class="div1">
-        <h2 id="fheading">Hello! Iam Merab
-            <img src="/imogi.jfif" alt="glassimogi" id="imogi">
+        <h2 id="fheading">Hello! Iam Merab <img src="/imogi.jfif" alt="glassimogi" id="imogi">
         </h2>
 
         <img src="/me.jpg" alt="me" id="photo">
@@ -30,8 +29,14 @@
 
     <!-- Start of second div-->
     <div class="div2">
-        <h3 id="sheading">Reality TV Shows</h3>
-        <p class="p">I love watching reality Tv shows because they give you insight of how different people live</p>
+        <h3 id="sheading">Data Analysis</h3>
+        <ul class="list">
+            <li>Microsoft Excel</li>
+            <li>Power BI</li>
+            <li>My SQL</li>
+            <li>Python</li>
+        </ul>
+
 
     </div>
     <!-- End of second div-->
@@ -40,12 +45,12 @@
     <!-- Start of third div-->
 
     <div class="div3">
-<h3 id="theading">Reading Books</h3>
-<Ul class="list">
-    <li><cite>A Better way to Pray</cite> by Andrew wormark</li>
-    <li><cite>SFFG</cite> by Moses Mukisa</li>
-    <li><cite>Honor</cite> by Moses Mukisa</li>
-</Ul>
+        <h3 id="theading">Reading Books</h3>
+        <Ul class="list">
+            <li><cite>A Better way to Pray</cite> by Andrew wormark</li>
+            <li><cite>SFFG</cite> by Moses Mukisa</li>
+            <li><cite>Honor</cite> by Moses Mukisa</li>
+        </Ul>
 
     </div>
     <!-- End of third div-->
